# sphinx

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  NOTICE  aclocal.m4  configure  configure.ac  sxmake
src/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  dummy-config.in  setup
src/add-ons/: Make-inc.am  Makefile.am  Makefile.in  SPHInX.cpp  SPHInX.h  SxAOMatTB.cpp  SxAOMatTB.h  SxDefectConc.cpp  SxDefectConc.h  SxDielec.cpp  SxDielec.h  SxDynMat.cpp  SxDynMat.h  SxEPRHyper.cpp  SxEPRHyper.h  SxExt.h  SxGetSKFiles.cpp  SxGetSKFiles.h  SxMurn.cpp  SxMurn.h  SxPartialRho.cpp  SxPartialRho.h  SxPhonon.cpp  SxPhonon.h  SxQuamol.cpp  SxQuamol.h  SxQuamolRedSubSpace.cpp  SxQuamolRedSubSpace.h  SxSlab.cpp  SxSlab.h  SxTestbed.h  SxThermo.cpp  SxThermo.h  SxVibrations.cpp  SxVibrations.h  SxWannier.cpp  SxWannier.h  SxWannierHam.cpp  SxWannierHam.h  SxWavesCmp.cpp  (+8 more)
src/api/: addons.doxy  bibliography.doxy  cli.doxy  configure.doxy  cvs.doxy  debug.doxy  dirac.doxy  footer.html  groups.doxy  header.html  k.burkes.f  langmix.doxy  leak.doxy  main.doxy  main.html  make.doxy  names.doxy  phinax.doxy  prefactors.doxy  profile.doxy  relnotes.doxy  requirements.doxy  signals.doxy  sockets.doxy  ssh.doxy  structure.doxy  terms.doxy  testbed.doxy  tutorial.doxy  vector.doxy
src/api/demodoc/: SxDemo.doc  author.doc  author.txt  citebib.doc  citebib.txt  code.doc  docgroup.doc  enums.doc  enums.txt  functions.doc  functions.txt  grouping.doc  grouping.txt  images.doc  images.txt  latex.doc  latex.txt  lists.doc  lists.txt  registry.doc  setenv.doc
src/api/images/: ddd-trace.eps  ddd.eps  fft-1.sxd  fft-2.sxd  refcounting-1.eps  refcounting-2.eps  refcounting-3.eps  refcounting-4.eps  refcounting-5.eps  refcounting-6.eps  refcounting.sxd
src/api/sx/: basis.h  definitions  eCut.h  file.h  getgroups  initialGuess.h  makecpp  makestd  real.h  rho.h  sx.cnf  waves.h
src/classic/: Make-inc.am  Makefile.am  Makefile.in  SxClassic.h  SxEAM.cpp  SxEAM.h  SxForst.cpp  SxForst.h  SxForstData.cpp  SxForstData.h  SxStillingerWeber.cpp  SxStillingerWeber.h  SxTaylorExpPotential.cpp  SxTaylorExpPotential.h  SxVDW.cpp  SxVDW.h
src/dft/: Make-inc.am  Makefile.am  Makefile.in  SxAOBasis.cpp  SxAOBasis.h  SxAtomicOrbitals.cpp  SxAtomicOrbitals.h  SxAtomicOrbitalsG.cpp  SxAtomicOrbitalsG.h  SxAtomicOrbitalsR.cpp  SxAtomicOrbitalsR.h  SxBlockDensityMatrix.cpp  SxBlockDensityMatrix.h  SxBundle3.h  SxBundle3.hpp  SxDFT.h  SxDFTBFilesReader.cpp  SxDFTBFilesReader.h  SxDFTConfig.h.in  SxDefectAlignUtil.cpp  SxDefectAlignUtil.h  SxDensity.cpp  SxDensity.h  SxDipoleCorrZ.cpp  SxDipoleCorrZ.h  SxEESGProj.cpp  SxEESGProj.h  SxFermi.cpp  SxFermi.h  SxFourierInterpol.cpp  SxFourierInterpol.h  SxGBasis.cpp  SxGBasis.h  SxGauss.cpp  SxGauss.h  SxGkBasis.cpp  SxGkBasis.h  SxHamInit.cpp  SxHamInit.h  SxHamSolver.cpp  (+111 more)
src/dft/examples/: Make-inc.am  Makefile.am  Makefile.in  sxatomorb.cpp
src/dirac/: Make-inc.am  Makefile.am  Makefile.in  SxBasis.cpp  SxBasis.h  SxBinIO.cpp  SxBinIO.h  SxDirac.cpp  SxDirac.h  SxDirac.hh  SxDirac.hpp  SxDiracLib.h  SxHDF5.cpp  SxHDF5.h  SxOverlap.cpp  SxOverlap.h  SxProjMatrix.h  SxProjMatrix.hpp
src/dirac/examples/: Make-inc.am  Makefile.am  Makefile.in  sxio.cpp
src/doc/: Makefile.am  Makefile.in  _htaccess.ext  doxygen-fast.cnf  doxygen-wiki.cnf  doxygen.cnf
src/exx/: Make-inc.am  Makefile.am  Makefile.in  SxChi0.cpp  SxChi0.h  SxExx.cpp  SxExx.h  SxExxSolver.cpp  SxExxSolver.h  SxFockGk.cpp  SxFockGk.h  SxFockTimer.h  SxRhoIndG.cpp  SxRhoIndG.h  SxRhoMixerG.cpp  SxRhoMixerG.h  SxSymFockGk.cpp  SxSymFockGk.h
src/geom/: Make-inc.am  Makefile.am  Makefile.in  SxAims.cpp  SxAims.h  SxArtifactFilter.cpp  SxArtifactFilter.h  SxAtomInfo.cpp  SxAtomInfo.h  SxAtomicStructure.cpp  SxAtomicStructure.h  SxAtomicStructure.hpp  SxCell.cpp  SxCell.h  SxElemDB.cpp  SxElemDB.h  SxEquivalence.cpp  SxEquivalence.h  SxForceSym.cpp  SxForceSym.h  SxGeom.h  SxGrid.cpp  SxGrid.h  SxLinEquation.cpp  SxLinEquation.h  SxNeighbors.cpp  SxNeighbors.h  SxPDBFast.cpp  SxPDBFast.h  SxPoscar.cpp  SxPoscar.h  SxPotential.cpp  SxPotential.h  SxRotation.cpp  SxRotation.h  SxSpeciesData.cpp  SxSpeciesData.h  SxSpeciesRef.cpp  SxSpeciesRef.h  SxSymFinder.cpp  (+8 more)
src/geom/examples/: Make-inc.am  Makefile.am  Makefile.in  sxatomstructbase.cpp  sxatomstructderiv.cpp
src/playground/: Makefile.am  README
src/share/: Makefile.am  Makefile.in
src/struct/: Make-inc.am  Makefile.am  Makefile.in  SxDriftFilter.h  SxFrozenPhonon.cpp  SxFrozenPhonon.h  SxHarmApprox.cpp  SxHarmApprox.h  SxHarmonicPotential.cpp  SxHarmonicPotential.h  SxHessian.cpp  SxHessian.h  SxHessianOps.cpp  SxHessianOps.h  SxLineFilter.cpp  SxLineFilter.h  SxMolDyn.cpp  SxMolDyn.h  SxRedundantCoords.cpp  SxRedundantCoords.h  SxSecondaryStructure.cpp  SxSecondaryStructure.h  SxStickyFilter.cpp  SxStickyFilter.h  SxStruct.h  SxStructOpt.cpp  SxStructOpt.h  SxSynchronousTransit.cpp  SxSynchronousTransit.h  SxThermodynamics.cpp  SxThermodynamics.h  SxTimeCorr.cpp  SxTimeCorr.h  SxTrajectory.cpp  SxTrajectory.h
src/system/: SxTemplate.cpp  SxTemplate.h  m  main.dox  make.am.apps  make.am.components  make.am.filelist  sxallcomplete.sh  sxextract.sh  sxrepair.sh  sxsetup.sh.ac.in  sxstdsyntax.pl  sxstylecheck.pl  sxvimsyntax.sh
src/tools/: Make-inc.am  Makefile.am  Makefile.in  Sx2Aims.cpp  Sx2DX.cpp  Sx2PDB.cpp  Sx2Poscar.cpp  Sx2XSF.cpp  Sx2XYZ.cpp  Sx2gwst.cpp  SxAOJoin.cpp  SxAOMat.cpp  SxAtomicSpin.cpp  SxB2BSpectrum.cpp  SxBader.cpp  SxBandAoDecomp.cpp  SxBandInfo.cpp  SxCalcPot.cpp  SxCalcQuamolOverlap.cpp  SxCheckInput.cpp  SxDefectAlign.cpp  SxDefectAlign2D.cpp  SxELNES.cpp  SxEffMass.cpp  SxEpsContrib.cpp  SxEpsContribPAW.cpp  SxEpsPrint.cpp  SxEpsSlope.cpp  SxEstimate.cpp  SxExtOpt.cpp  SxFastBS.cpp  SxFindK.cpp  SxForces.cpp  SxGetFermi.cpp  SxHarmPotTst.cpp  SxInterpol.cpp  SxKPPrint.cpp  SxLocalEnergy.cpp  SxMIES.cpp  SxMeshIso.cpp  (+33 more)
sxaccelerate/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  setup
sxaccelerate/src/: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  setup
(+836 files in other folders)
