# ---------------------------------------------------------------------------
#
#      The ab-initio based multiscale library
#
#                  S / P H I / n X
#
#      Copyright:  Max-Planck-Institute for Iron Research
#                  40237 Duesseldorf, Germany
#
#      Contact:    https://sxlib.mpie.de
#      Authors:    see sphinx/AUTHORS
#      License:    see sphinx/LICENSE
#
# ---------------------------------------------------------------------------

# Top level Automake input file. Invoke with
#    automake -a
#    autoreconf -i
#    configure ...

ACLOCAL_AMFLAGS = -I sxaccelerate/src/system/m4

SUBDIRS= sxaccelerate src
EXTRA_DIST=setup LICENSE NOTICE INSTALL sxmake 
