# ---------------------------------------------------------------------------
#
#           The general purpose cross platform C/C++ framework
#         
#                       S x A c c e l e r a t e
#         
#           Home:       https://www.sxlib.de
#           License:    Apache 2
#           Authors:    see src/AUTHORS
#
# ---------------------------------------------------------------------------

# Top level Automake input file. Invoke with
#    automake -a
#    autoreconf -i
#    configure ...

ACLOCAL_AMFLAGS = -I src/system/m4

SUBDIRS= src
EXTRA_DIST=setup
