# ---------------------------------------------------------------------------
#
#      The ab-initio based multiscale library
#
#                  S / P H I / n X
#
#      Copyright:  Max-Planck-Institute for Iron Research
#                  40237 Duesseldorf, Germany
#
#      Contact:    https://sxlib.mpie.de
#      Authors:    see sphinx/AUTHORS
#      License:    see sphinx/LICENSE
#
# ---------------------------------------------------------------------------


SUBDIRS = std structures

dist_pkgdata_DATA  = empty.sx parameters.sx parallelHierarchy.sx
nobase_dist_pkgdata_DATA = species/elements.sx
EXTRA_DIST=potentials potentials_eam species species_dftb
