# ----------------------------------------------------------------------------
#
#           The general purpose cross platform C/C++ framework
#
#                       S x A c c e l e r a t e
#
#           Home:       https://www.sxlib.de
#           License:    Apache 2
#           Authors:    see src/AUTHORS
#
# ----------------------------------------------------------------------------

NAME      = "sxnonstd"
MODE      = "libOnly"
VERSION   = "1:0:0"
NAME_HASH = 3141584102  # sxloghash

SX_DEPDIRS  =
NUM_DEPLIBS =

# ----------------------------------------------------------------------------

include $(top_srcdir)/system/make.am.filelist

AM_CXXFLAGS = 
